--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                                 <div class="repare-pass">
                                                     <div class="log-into">
                                                         <div class="try-thisfield">
-                                                            <a href="profile-1.html" class="logs1">Log In</a>
+                                                            <a href="profile.html" class="logs1">Log In</a>
                                                             <a href="" class="forgot1">Forgot Password?</a>
                                                         </div>
                                                         <span>Don't have an membership? <a href="">JOIN</a></span>
@@ -240,7 +240,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-course mt-30">
                         <div class="course-img">
-                            <a href="#"><img src="assets/images/course-2.jpg" alt="Course 1"></a>
+                            <a href="course-inner-page.html"><img src="assets/images/course-2.jpg" alt="Course 1"></a>
                         </div>
                         <a href="#">
                             <h4 class="title">UI Design Master Course</h4>
