--- a/inner-page-after.html
+++ b/inner-page-after.html
@@ -105,7 +105,7 @@
                                                 <div class="repare-pass">
                                                     <div class="log-into">
                                                         <div class="try-thisfield">
-                                                            <a href="profile-1.html" class="logs1">Log In</a>
+                                                            <a href="profile.html" class="logs1">Log In</a>
                                                             <a href="" class="forgot1">Forgot Password?</a>
                                                         </div>
                                                         <span>Don't have an membership? <a href="">JOIN</a></span>
