--- a/profile-2.html
+++ b/profile-2.html
@@ -104,7 +104,7 @@
                                                <div class="repare-pass">
                                                    <div class="log-into">
                                                        <div class="try-thisfield">
-                                                           <a href="profile-1.html" class="logs1">Log In</a>
+                                                           <a href="profile.html" class="logs1">Log In</a>
                                                            <a href="" class="forgot1">Forgot Password?</a>
                                                        </div>
                                                        <span>Don't have an membership? <a href="">JOIN</a></span>
@@ -227,26 +227,7 @@
                                 consequatur voluptate reprehenderit minus non omnis similique temporibus voluptates hic
                                 mollitia nam ducimus dicta, distinctio reiciendis quidem aspernatur.</p>
                         </div>
-                        <div role="tabpanel" class="tab-pane fade" id="tab-2">
-                            <div class="row pl-30">
-                                <div class="col-lg-4 col-sm-6">
-                                    <div class="single-course mt-30">
-                                        <div class="course-img">
-                                            <a href="#"><img src="assets/images/course-5.jpg" alt="Course 1"></a>
-                                        </div>
-                                        <a href="#">
-                                            <h4 class="title">Learn Graphic Design</h4>
-                                        </a>
-                                        <p>Learn Web/UI Design with Project
-                                            & Live Support</p>
-                                        <span class="course-meta">
-                                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i> 20
-                                            Class with Project
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
