--- a/profile.html
+++ b/profile.html
@@ -104,7 +104,7 @@
                                                 <div class="repare-pass">
                                                     <div class="log-into">
                                                         <div class="try-thisfield">
-                                                            <a href="profile-1.html" class="logs1">Log In</a>
+                                                            <a href="profile.html" class="logs1">Log In</a>
                                                             <a href="" class="forgot1">Forgot Password?</a>
                                                         </div>
                                                         <span>Don't have an membership? <a href="">JOIN</a></span>
@@ -216,7 +216,7 @@
                             <a class="nav-link" href="#tab-2" role="tab" data-toggle="tab">My Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#tab-3" role="tab" data-toggle="tab">History</a>
+                            <a class="nav-link" href="#tab-3" role="tab" data-toggle="tab">My Courses After</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#tab-4" role="tab" data-toggle="tab">Profile</a>
@@ -235,6 +235,27 @@
                                 </div>
                                 <h4 class="title">No course found! Learn first</h4>
                                 <a href="#" class="join-course">Join the course</a>
+                            </div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane fade" id="tab-3">
+                            <div class="row pl-30">
+                                <div class="col-md-6">
+                                    <div class="single-course profile mt-30">
+                                        <div class="course-img">
+                                            <a href="#"><img src="assets/images/course-5.jpg" alt="Course 1"></a>
+                                            <a href="#" class="start-btn">Start Course</a>
+                                        </div>
+                                        <a href="#">
+                                            <h4 class="title">Learn Graphic Design</h4>
+                                        </a>
+                                        <p>Learn Web/UI Design with Project
+                                            & Live Support</p>
+                                        <span class="course-meta">
+                                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i> 20
+                                            Class with Project
+                                        </span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
