--- a/course-inner-page.html
+++ b/course-inner-page.html
@@ -69,12 +69,17 @@
                                                 <div class="single-video-left">
                                                     <a href="#" class="play-btn"><i
                                                             class="icofont-play-alt-1"></i></a>
-                                                    <div class="content nav-item">
-                                                        <a class="nav-link active" href="#tab-1" role="tab"
-                                                            data-toggle="tab">
-                                                            <h5 class="title">Learn all the Basic tools of Photoshop for
-                                                                UI Design</h5>
-                                                        </a>
+                                                    <div class="content">
+                                                        <ul class="nav" role="tablist">
+                                                            <li class="nav-item">
+                                                                <a href="#tab-1" class="nav-link" role="tab"
+                                                                    data-toggle="tab">
+                                                                    <h5 class="title">Learn all the Basic tools of
+                                                                        Photoshop for
+                                                                        UI Design</h5>
+                                                                </a>
+                                                            </li>
+                                                        </ul>
                                                         <span class="video-duratio"><i class="icofont-clock-time"></i>
                                                             5:07min</span>
                                                     </div>
@@ -84,12 +89,17 @@
                                                 <div class="single-video-left">
                                                     <a href="#" class="play-btn"><i
                                                             class="icofont-play-alt-1"></i></a>
-                                                    <div class="content nav-item">
-                                                        <a href="#tab-2" class="nav-link" role="tab"
-                                                            data-toggle="tab">
-                                                            <h5 class="title">Learn all the Basic tools of Photoshop for
-                                                                UI Design</h5>
-                                                        </a>
+                                                    <div class="content">
+                                                        <ul class="nav" role="tablist">
+                                                            <li class="nav-item">
+                                                                <a href="#tab-2" class="nav-link" role="tab"
+                                                                    data-toggle="tab">
+                                                                    <h5 class="title">Learn all the Basic tools of
+                                                                        Photoshop for
+                                                                        UI Design</h5>
+                                                                </a>
+                                                            </li>
+                                                        </ul>
                                                         <span class="video-duratio"><i class="icofont-clock-time"></i>
                                                             5:07min</span>
                                                     </div>
@@ -116,12 +126,17 @@
                                                 <div class="single-video-left">
                                                     <a href="" class="play-btn"><i
                                                             class="icofont-play-alt-1"></i></a>
-                                                    <div class="content nav-item">
-                                                        <a href="#tab-3" class="nav-link" role="tab"
-                                                            data-toggle="tab">
-                                                            <h5 class="title">Learn all the Basic tools of Photoshop for
-                                                                UI Design</h5>
-                                                        </a>
+                                                    <div class="content">
+                                                        <ul class="nav" role="tablist">
+                                                            <li class="nav-item">
+                                                                <a href="#tab-3" class="nav-link" role="tab"
+                                                                    data-toggle="tab">
+                                                                    <h5 class="title">Learn all the Basic tools of
+                                                                        Photoshop for
+                                                                        UI Design</h5>
+                                                                </a>
+                                                            </li>
+                                                        </ul>
                                                         <span class="video-duratio"><i class="icofont-clock-time"></i>
                                                             5:07min</span>
                                                     </div>
@@ -135,46 +150,55 @@
                     </div>
                 </div>
                 <div class="col-md-7">
-                    <div class="single-video-left video-title">
-                        <a class="play-btn">
-                            <i class="icofont-play-alt-1"></i>
-                        </a>
-                        <div class="content">
-                            <h5 class="title">Learn all the Basic tools of Photoshop for
-                                UI Design</h5>
-                        </div>
-                    </div>
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane fade in active show" id="tab-1">
+                            <div class="single-video-left video-title">
+                                <a class="play-btn">
+                                    <i class="icofont-play-alt-1"></i>
+                                </a>
+                                <div class="content">
+                                    <h5 class="title">Learn all the Basic tools of Photoshop for
+                                        UI Design</h5>
+                                </div>
+                            </div>
                             <div class="tab-video">
-                                <div class="main-video">
-                                    <iframe width="853" height="480" src="https://www.youtube.com/embed/5ttHECYOezQ"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen>
-                                    </iframe>
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe class="embed-responsive-item"
+                                        src="https://www.youtube.com/embed/5ttHECYOezQ" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
                         <div role="tabpanel" class="tab-pane fade" id="tab-2">
+                            <div class="single-video-left video-title">
+                                <a class="play-btn">
+                                    <i class="icofont-play-alt-1"></i>
+                                </a>
+                                <div class="content">
+                                    <h5 class="title">Learn all the Basic tools of Photoshop for
+                                        UI Design</h5>
+                                </div>
+                            </div>
                             <div class="tab-video">
-                                <div class="main-video">
-                                    <iframe width="853" height="480" src="https://www.youtube.com/embed/OUjM6vRZbb0"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen>
-                                    </iframe>
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe class="embed-responsive-item"
+                                        src="https://www.youtube.com/embed/OUjM6vRZbb0" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
                         <div role="tabpanel" class="tab-pane fade" id="tab-3">
+                            <div class="single-video-left video-title">
+                                <a class="play-btn">
+                                    <i class="icofont-play-alt-1"></i>
+                                </a>
+                                <div class="content">
+                                    <h5 class="title">Learn all the Basic tools of Photoshop for
+                                        UI Design</h5>
+                                </div>
+                            </div>
                             <div class="tab-video">
-                                <div class="main-video">
-                                    <iframe width="853" height="480" src="https://www.youtube.com/embed/0EayVa9QPhY"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen>
-                                    </iframe>
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe class="embed-responsive-item"
+                                        src="https://www.youtube.com/embed/0EayVa9QPhY" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
