--- a/about.html
+++ b/about.html
@@ -28,11 +28,12 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!--====== responsive css ======-->
     <link rel="stylesheet" href="assets/css/responsive.css">
-    
+
 </head>
-    <!--[if lt IE 8]>
+<!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+
 <body>
 
     <div class="overlayed"></div>
@@ -55,7 +56,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="inner-page-after.html">Pro Content</a></li>
-                                <li><a href="about.html">We are</a></li>
+                                <li><a href="#">We are</a></li>
                             </ul>
                         </div>
                         <div class="sideicon">
@@ -68,12 +69,11 @@
                 </div>
                 <div class="col-md-4 my-auto">
                     <div class="header-buttons">
-                        <a href="#" data-toggle="modal" data-target="#exampleModalCenter"
-                            class="site-button">Log In</a>
+                        <a href="#" data-toggle="modal" data-target="#exampleModalCenter" class="site-button">Log In</a>
                         <a href="#" data-toggle="modal" data-target="#exampleModalCenter2"
                             class="site-button borderd">Join Now</a>
                     </div>
-                    
+
                     <div class="for-loginmethod">
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
@@ -199,174 +199,165 @@
     <!-- hamburger menu end -->
 
     <!-- hero area start -->
-    <section class="hero-area bg_img" data-background="assets/images/hero-bg.jpg">
+    <section class="hero-area about-page">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h2 class="title">Now learn at your own table</h2>
-                    <h4 class="sub-title cd-headline clip is-full-width">Time will save, learning will be easier
-                        <span class="cd-words-wrapper">
-                            <b class="is-visible">Mobile App Desing</b>
-                            <b>PSD Desing</b>
-                            <b>Template Desing</b>
-                            <b>Ux Design</b>
-                        </span></h4>
+                    <h2 class="title">We Share Industry Experience</h2>
                 </div>
             </div>
+        </div>
+        <div class="about-shape">
+            <span class="shape-1"><img src="assets/images/shape-1.png" alt=""></span>
+            <span class="shape-2"><img src="assets/images/shape-2.png" alt=""></span>
+            <span class="shape-3"><img src="assets/images/shape-3.png" alt=""></span>
+            <span class="shape-4"><img src="assets/images/shape-4.png" alt=""></span>
         </div>
     </section>
     <!-- hero area end -->
 
-    <!-- course section start -->
-    <section class="courses-area pb-60">
+    <!-- about content start -->
+    <section class="about-area">
         <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="about-bg bg_img" data-background="assets/images/about-bg.jpg"></div>
+                    <div class="about-content">
+                        <p><span>UX Club</span> is the online based UIUX & design learning platform* Already we have
+                            created an
+                            expert team who provides
+                            you video class and online support, we have many talented youths in remote areas of
+                            bangladesh
+                            who can't learn properly for lacking of exact supervision <span>UX Club</span> is for them.
+                            Now get
+                            started your learning with us.. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- about content end -->
+
+    <!-- togather area start -->
+    <section class="togather-area">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-10 text-center">
+                    <div class="section-title">
+                        <h2 class="title">Thanks to <span>SDMGA</span> Program, for bringing us together</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-10">
+                    <div class="row mt-none-30">
+                        <div class="col-md-4 mt-30">
+                            <div class="single-togther-item">
+                                <img src="assets/images/about-1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-md-4 mt-30">
+                            <div class="single-togther-item">
+                                <img src="assets/images/about-2.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-md-4 mt-30">
+                            <div class="single-togther-item">
+                                <img src="assets/images/about-3.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- togather area end -->
+
+    <!-- trainning area start -->
+    <section class="trainning-area">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-10 text-center">
+                    <div class="section-title">
+                        <h2 class="title">From everyone's training to the profession <span>we are friends</span></h2>
+                    </div>
+                </div>
+            </div>
             <div class="row mt-none-30">
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-course mt-30">
-                        <div class="course-img">
-                            <a href="inner-page-before.html"><img src="assets/images/course-1.jpg" alt="Course 1"></a>
+                <div class="col-md-4 mt-30">
+                    <div class="single-trainning-item">
+                        <div class="trainning-img" data-overlay="7">
+                            <a href="#"><img src="assets/images/trainning-1.jpg" alt="Course 1"></a>
                         </div>
-                        <a href="inner-page-before.html">
-                            <h4 class="title">Become a Web Designer</h4>
-                        </a>
-                        <p>Project based web templete design, with
-                            Industry expert mentor</p>
-                        <span class="course-meta">
-                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i> 20
-                            Class with Project
-                        </span>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-course mt-30">
-                        <div class="course-img">
-                            <a href="course-inner-page.html"><img src="assets/images/course-2.jpg" alt="Course 1"></a>
-                        </div>
-                        <a href="#">
-                            <h4 class="title">UI Design Master Course</h4>
-                        </a>
-                        <p>Learn user interface design with
-                            latest trent become a product designer</p>
-                        <span class="course-meta">
-                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i> 40
-                            Class with Project
-                        </span>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-course mt-30">
-                        <div class="course-img">
-                            <a href="#"><img src="assets/images/course-3.jpg" alt="Course 1"></a>
-                        </div>
-                        <a href="#">
-                            <h4 class="title">Learn Mobile App Design</h4>
-                        </a>
-                        <p>Learn Mobile App Design with real project
-                            with proper guideline</p>
-                        <span class="course-meta">
-                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i> 30
-                            Class with Project
-                        </span>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-course mt-30">
-                        <div class="course-img">
-                            <a href="#"><img src="assets/images/course-4.jpg" alt="Course 1"></a>
-                        </div>
-                        <a href="#">
-                            <h4 class="title">Learn Adobe XD for <span>Free</span></h4>
-                        </a>
-                        <p>Learn adobe XD latest version
-                            and build a design system with XD.</p>
-                        <span class="course-meta">
-                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i> 20
-                            Class with Project
-                        </span>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-course mt-30">
-                        <div class="course-img">
-                            <a href="#"><img src="assets/images/course-5.jpg" alt="Course 1"></a>
-                        </div>
-                        <a href="#">
-                            <h4 class="title">Learn Graphic Design</h4>
-                        </a>
-                        <p>Learn Web/UI Design with Project
-                            & Live Support</p>
-                        <span class="course-meta">
-                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i> 20
-                            Class with Project
-                        </span>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-course mt-30">
-                        <div class="course-img">
-                            <a href="#"><img src="assets/images/course-6.jpg" alt="Course 1"></a>
-                        </div>
-                        <a href="#">
-                            <h4 class="title">Executive Design Course</h4>
-                        </a>
-                        <p>Learn CV Design, Pitch deck Design,
-                            Infographic and more</p>
-                        <span class="course-meta">
-                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i> 20
-                            Class with Project
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- course section end -->
-
-    <!-- blog section start -->
-    <section class="blog-area">
-        <div class="container-fluid">
-            <div class="row no-gutters">
-                <div class="col-lg-4">
-                    <div class="single-post">
-                        <div class="thumb bg_img" data-background="assets/images/blog-1.jpg" data-overlay="4"></div>
                         <div class="content">
-                            <h4 class="sub-title">WE ARE</h4>
-                            <a href="#">
-                                <h2 class="title">Best community for you</h2>
-                            </a>
-                            <p>Join to be expert and copyright &copy; 2020 UX Club Bangladesh</p>
+                            <h4 class="title">Learn at your table</h4>
+                            <p>Learn in your own home, save time and
+                                easily become skilled</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="single-post">
-                        <div class="thumb bg_img" data-background="assets/images/blog-2.jpg" data-overlay="4"></div>
+                <div class="col-md-4 mt-30">
+                    <div class="single-trainning-item">
+                        <div class="trainning-img" data-overlay="7">
+                            <a href="#"><img src="assets/images/trainning-2.jpg" alt="Course 1"></a>
+                        </div>
                         <div class="content">
-                            <h4 class="sub-title">WE SHARE</h4>
-                            <a href="#">
-                                <h2 class="title">Free content for best skill</h2>
-                            </a>
-                            <p>Sharing our experience for everyone</p>
+                            <h4 class="title">Learn at your table</h4>
+                            <p>Learn in your own home, save time and
+                                easily become skilled</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="single-post">
-                        <div class="thumb bg_img" data-background="assets/images/blog-3.jpg" data-overlay="4"></div>
+                <div class="col-md-4 mt-30">
+                    <div class="single-trainning-item">
+                        <div class="trainning-img" data-overlay="7">
+                            <a href="#"><img src="assets/images/trainning-3.jpg" alt="Course 1"></a>
+                        </div>
                         <div class="content">
-                            <h4 class="sub-title">WE MEET</h4>
-                            <a href="#">
-                                <h2 class="title">For in house training</h2>
-                            </a>
-                            <p>Join now our house training program</p>
+                            <h4 class="title">Learn at your table</h4>
+                            <p>Learn in your own home, save time and
+                                easily become skilled</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- blog section end -->
+    <!-- trainning area end -->
 
+    <!-- newslater area start -->
+    <section class="newslater-area">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <div class="section-title">
+                        <h2 class="title">Stay Connected with <span>UX Club</span> for new offer</h2>
+                    </div>
+                    <div class="newslater-form">
+                        <form action="index.html">
+                            <input type="email" name="email" placeholder="Enter your email">
+                            <button type="submit">Subscribe</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- newslater area end -->
+
+    <!-- we provide section start -->
+    <section class="we-provide-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="title">We Provide UX & Digital Solution</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- we provide section end -->
+
+    <!-- footer area start -->
     <footer class="footer-area">
         <div class="container">
             <div class="row">
